# pxr-tbb

./: README.md  pxr-tbb.patch  pyproject-dev.toml  pyproject.toml
.github/actions/oneTBB/: action.yml
.github/workflows/: pypi.yml
