[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pxr-tbb"
version = "2022.2.0.1"
description = "Portable TBB bundle for building Pixar's libraries."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["pixar", "open-usd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]

[project.urls]
Repository = "https://github.com/untwine/pxr-tbb"

[tool.scikit-build]
cmake.version = ">=3.21,<4.2"
cmake.args = [
    "-DTBB_TEST=OFF",
    "-DTBB_EXAMPLES=OFF",
    "-DTBBMALLOC_BUILD=OFF",
    "-DBUILD_SHARED_LIBS=ON",
    "-DCMAKE_INSTALL_LIBDIR=pxr/.libs",
    "-DCMAKE_INSTALL_INCLUDEDIR=TBB/include",
    "-DCMAKE_INSTALL_DATAROOTDIR=TBB",
]
wheel.exclude = ["TBB", "pkgconfig"]
sdist.exclude = [".github", "doc", "examples", "python", "test"]
